samples/_failures_safe/1761435269_c1f799_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50d4889d.c: In function ‘main’:
./samples/SAFE/__tmp_50d4889d.c:174:5: error: expected declaration or statement at end of input
  174 |     if (len > 0 && input[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_50d4889d.c:174:5: error: expected declaration or statement at end of input
